tests/errors/DuplicatedNames.java
public class DuplicatedNames { }

interface DuplicatedNames { }

class DuplicatedNames { }

aspect DuplicatedNames { }

aspect DuplicatedNames of eachJVM() { }
